core/roboconf-core/src/test/resources/configurations/valid/commented-component-2.graph

# Simple component
# with multi-line comment

     # and badly-formatted!

apache {

	exports: ip;	# in-line comment
	
}

# end comment