core/roboconf-core/src/test/resources/configurations/invalid/facet-line-number.graph
facet a {

	# a comment

	exports: ip;
